Filter using heatmap selections

--- a/style.css
+++ b/style.css
@@ -40,11 +40,11 @@ main {
     /* background-color: lightblue; */
 /* } */
 
-#boxplot{
+/* #boxplot{
     width: 600px;
     height: 400px;
     background-color: lightgreen;
-}
+} */
 
 .filter{
     width: 200px;
